--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">Droid Faker</string>
 
+    <string name="calls">Anrufe</string>
+    <string name="calls.count">Anzahl Anrufe</string>
     <string name="contacts">Kontakte</string>
     <string name="contacts.count">Anzahl Kontakte</string>
     <string name="generate">Generieren</string>
@@ -30,5 +32,6 @@
 
     <string name="pref.contact.summary.count">Anzahl der zu erstellenden Kontakte</string>
     <string name="pref.sms.summary.count">Anzahl der zu erstellenden SMSs</string>
+    <string name="pref.calls.summary.count">Anzahl der zu erstellenden Anrufe</string>
 
 </resources>
