--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="pref.history.summary.count">Größe des zu erstellenden Verlaufes</string>
     <string name="pref.search.summary.count">Anzahl der Suchen</string>
     <string name="open.config.file">Config Datei öffnen</string>
+    <string name="using.apks">Using apks</string>
 
 </resources>
